# e_to_e_msgr

./: .gitignore  Cargo.toml  test.database
src/: auth_cli.rs  auth_commands.rs  commands.rs  db.rs  establish_websocket.rs  json_structures.rs  main.rs  manage_keys.rs  messages.rs  session_cli.rs  session_manager.rs  tests.rs  to_server.rs
