[package]
name = "e_to_e_msgr"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
widestring = "1.2.0"
winapi = { version = "0.3", features = ["wincrypt"] }
pem = "3.0.5"
base64 = "0.22.1"
engine = "0.0.0"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
argon2 = "0.5.3"
password-hash = "0.5.0"
rand_core = "0.9.3"
tungstenite = "0.27.0"
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"
uuid = { version = "1.17.0", features = ["v4"] }
keyring = { version = "3.6.2", features = ["windows-native"] }
reqwest = { version = "0.12.22", features = ["json"] }
csv = "1.3.1"
x448 = "0.6.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
tokio-fs = "0.1.7"
[dependencies.windows]
version = "0.52" # or your preferred version
features = [
    "Win32_Security_Cryptography",
]
